--- a/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
@@ -14,6 +14,7 @@
             Verifique seus dados básicos e atualize todos os campos.
             %br
             %br
-            Se seu CPF ou Nome estiver divergente, corrigiremos de acordo com a documentação enviada.
+
+            Se seu CPF estiver divergente, procure um dos nossos postos de atendimento presencial, caso o nome esteja divergente, corrigiremos de acordo com a documentação enviada.
 
       = render 'form'
