--- a/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
@@ -1,7 +1,7 @@
 
 .ui.label.blue
   %p{style: 'text-align: justify; font-size: 14px !important'}
-    Neste momento você deverá anexar TODAS as fotos das certidões dos 9 cartórios de Registros de Imóveis do DF,
+    Agora você deverá anexar TODAS as fotos das certidões dos 9 cartórios de Registros de Imóveis do DF,
     %a{href: 'javascript:void(0)', onclick: 'document_modal()'}
       Clique aqui
 %br
@@ -83,22 +83,22 @@
           %td QS 1 Rua 210 Lt 40 Sl 915/928 Torre B - Taguating Shopping
         %tr
           %td Certidão do Cartório do 4º Ofício de Registro de Imóveis
-          %td QE 07 Bloco H Lj 19 - Guará I
+          %td EQ 31/33 Lote 05 Ed. Consei Sl 210/2012 - Guará II.
         %tr
           %td Certidão do Cartório do 5º Ofício de Registro de Imóveis
-          %td Ed. Centro Empresarial Correia, Sl 704/706, Setor Central/Gama
+          %td Qd 07 Lts 990/995 - 1º Andar - Setor Leste Industrial/Gama
         %tr
           %td Certidão do Cartório do 6º Ofício de Registro de Imóveis
           %td CNM 01 Bloco H, 1º Andar - Ceilândia Centro
         %tr
           %td Certidão do Cartório do 7º Ofício de Registro de Imóveis
-          %td Qd Central Bl 11 Lt 03 01 - Sobradinho
+          %td Qd 05 Área Reservada 01 Loja 01 Ed. Mirante da Serra Lj 01 - Sobradinho
         %tr
           %td Certidão do Cartório do 8º Ofício de Registro de Imóveis
-          %td Av. Independência, Plaza Shopping, Sala M 05 - Planaltina
+          %td Av. Independência, Sala 13 Setor - Comercial Central - Planaltina
         %tr
           %td Certidão do Cartório do 9º Ofício de Registro de Imóveis
-          %td AE 04 Bloco B Lt 1 Lj 1A - Setor Tradicional - Brazlândia
+          %td Qd 12 Lt 08 - Setor Tradicional Brazlândia
     %br
 
     %p{style: 'text-align: center'}
