--- a/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
@@ -148,6 +148,31 @@
         = f.input :attachment, as: :hidden, label: false, as: :file, input_html: { style: 'display: none', class: 'upload', id: 'document_6' }
 
 
+
+- if [3,2].include?(@ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).kinship_id) && (@ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).age >= 18 && @ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).age < 24)
+  .ui.segment
+    %h4#def
+      Declaração de escolaridade
+    - unless @ticket.documents.where(document_type_id: 41).where(dependent_mirror_id: params[:dependent_mirror_id]).present?
+      .ui.label.red.tiny{style: 'margin-bottom: 12px'} Pendente
+
+    = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'dependent', document_type_id: 41, anchor: 'def', dependent_mirror_id: params[:dependent_mirror_id]) do |f|
+      - if @ticket.documents.where(document_type_id: 41,dependent_mirror_id: params[:dependent_mirror_id]).present?
+        - @ticket.documents.where(document_type_id: 41).where(dependent_mirror_id: params[:dependent_mirror_id]).each_with_index do |document, index|
+          = link_to "#{index + 1} <i class='file icon'></i>".html_safe, custom_custom_image_path(document, dependent_mirror_id: params[:dependent_mirror_id], type: params[:type], anchor: 'def'), remote: true, class: 'ui button blue icon', style: 'margin-bottom: 10px'
+
+        %br/
+        %br/
+      - else
+        %i  Nenhum arquivo enviado.
+        %br/
+        %br/
+      %div
+        %label.ui.icon.button.fluid{:for => 'document_7'}
+          %i.photo.icon
+          Enviar novo arquivo
+        = f.input :attachment, as: :hidden, label: false, as: :file, input_html: { style: 'display: none', class: 'upload', id: 'document_7' }
+
 %br
 - if @ticket.allow_dependent(params[:dependent_mirror_id])
   = link_to "Continuar atualização", custom_custom_ticket_custom_dependents_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
