--- a/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
@@ -15,6 +15,6 @@
             %br
             %br
 
-            Se seu CPF estiver divergente, procure um dos nossos postos de atendimento presencial, caso o nome esteja divergente, corrigiremos de acordo com a documentação enviada.
+            Se seu CPF estiver divergente, procure um dos nossos postos de atendimento presencial. Caso o nome esteja divergente, corrigiremos de acordo com a documentação enviada.
 
       = render 'form'
