--- a/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
@@ -289,14 +289,14 @@
   %br
   %br
   .ui.label.red{style: 'text-align: justify; font-size: 15px;'}
-    %p Para finalizar esta etapa, favor enviar ao menos um 'arquivo' de cada categoria exigida acima.
+    %p Para finalizar esta etapa, favor enviar ao menos um arquivo de cada categoria de documentação exigida.
 
 
 
 // 5 ANOS DE DF
 #arrival_df_modal.ui.modal{style: 'display: none; padding-top: 80px; padding-bottom: 80px'}
   .ui.content
-    %p Para comprovar os 5 anos no DF e o tempo de domicílio no DF, serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato.
+    %p Para comprovar os 5 anos no DF e o tempo de domicílio no DF (Chegada ao DF), serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato.
     %br/
 
     %p a) Comprovante de água, luz ou telefone;
