--- a/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
@@ -59,11 +59,11 @@
   = link_to "Finalizar etapa", custom_custom_ticket_document_path(@ticket), class: 'ui button yellow fluid'
 - else
   .ui.label.red{style: 'text-align: justify; font-size: 15px;'}
-    %p Para realizar a finalização desta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
+    %p Para finalizar esta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
 // 5 ANOS DE DF
 #document_modal.ui.modal{style: 'display: none; padding-top: 90px; padding-bottom: 90px'}
   .ui.content
-    %p Você poderá escolher um dos cartórios abaixo e requrer as 9 certidões em um só local.
+    %p Você poderá escolher um dos cartórios abaixo e requerer as 9 certidões em um só local.
     %br/
 
     %table.ui.table.celled.striped
