--- a/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
@@ -48,4 +48,4 @@
     = link_to "Continuar atualização", custom_custom_ticket_custom_incomes_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
   - else
     .ui.label.red{style: 'text-align: justify; font-size: 15px;'}
-      %p Para realizar a finalização desta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
+      %p Para finalizar esta etapa, favor enviar ao menos um arquivo de cada categoria de documentação exigida.
