--- a/engines/attendance/app/views/attendance/custom/custom_dependents/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_dependents/index.html.haml
@@ -52,9 +52,9 @@
     %br/
     %p Irmão(ã), neto(a) ou bisneto(a) menor de 18 anos, desde que detenha a guarda judicial, ou menor de 24 anos, desde que detenha a guarda judicial e esteja cursando ensino superior, com a devida comprovação dessa situação e da dependência econômica;
     %br/
-    %p Pai/mãe, avô/avó desde que sejam dependentes na declaração do Imposto de Renda de Pessoa Física - IRPF; Incapaz que esteja sob sua tutela ou curatela, comprovado por decisão judicialão o ano calendário do IR;
+    %p Pai/mãe, avô/avó desde que sejam dependentes na declaração do Imposto de Renda de Pessoa Física - IRPF sendo considerado o ano calendário do IR;
     %br/
-    %p Incapaz que esteja sob sua tutela ou curatel, comprovada por decisão judicial;
+    %p Incapaz que esteja sob sua tutela ou curatela, comprovada por decisão judicial;
 
     %br
 
@@ -62,28 +62,33 @@
       %b Como comprovar os dependentes
 
     %br
-    %p É necessária a apresentação do Cadastro de Pessoa Física - CPF para dependentes com idade igual ou superior a 14 anos, acrescido dos seguintes documentos, denttro do prazo de validade, conforme o caso:
+    %p É necessária a apresentação do Cadastro de Pessoa Física - CPF para dependentes com idade igual ou superior a 14 anos, acrescido dos seguintes documentos, dentro do prazo de validade, conforme o caso:
     %br/
     %p a) Certidão de nascimento;
     %p b) Documento de Identidade, CNH ou passaporte brasileiro;
     %p c) Certificado de reservista;ou
-    %p c) Carteira de trabalho e previdência social - CTPS;ou
-    %p c) Certidão de casamento ou união estável com firma reconhecida;
-    %p c) Certidão de tutela ou curatela por determinação judicial, para os que se encontrem sob esses institutos;
-    %p c) Comprovante de dependência dos pais, avós ou bisavós no imporsto de Renda de Pessoa Física - IRPF do titular;
+    %p d) Carteira de trabalho e previdência social - CTPS;ou
+    %p e) Certidão de casamento ou união estável com firma reconhecida;
+    %p f) Certidão de tutela ou curatela por determinação judicial, para os que se encontrem sob esses institutos;
+    %p g) Comprovante de dependência dos pais, avós ou bisavós no imporsto de Renda de Pessoa Física - IRPF do titular;
     %br/
-    %p Para comprovar a renda familiar burta de até 12 (doze) salários mínimos serão admitidos:textile
+    %p Para comprovar a renda familiar bruta de até 12 (doze) salários mínimos serão admitidos
     %br/
     %p a) Empregado com carteira de trabalho assinada;
-
-    %p Cópia das folhas em que conste a qualificação civil, a foto, o contrato de trabalho e os tês últimos contracheques contendo o carimbo e CNPJ do empregador;
+    %p cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho e os três últimos contracheques contendo o carimbo e CNPJ do empregador.
 
     %p b) Comerciante:
+    %p cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho;
     %p Contrato social registrado na junta comercial e DECORE emitida por profissional competente; ou declaração de Imposto de Renda de Pessoa Física (IRPF) com recibo de entrega.
+    %br/
 
     %p c) Servidor ou Empregado Público:
     %p Os três últimos contracheques emitidos pelo órgão empregador, com carimbo de CNPJ ou com código de validação.
+
+    %br/
     %p d) Trabalho Autônomo:
+    %p cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho e declaração de atividade informal.
+
     %p DECORE emitido por profissional competente, de declaração de Imposto de Renda com recibo de entrega.
 
 
