--- a/engines/attendance/app/views/attendance/custom/custom_incomes/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_incomes/index.html.haml
@@ -17,7 +17,7 @@
           clique aqui.
     .ui.label.blue
       %p{style: 'text-align: justify; font-size: 14px !important'}
-        ATENÇÃO: O titular do cadastro ou seu dependente que possuir renda zero deverá apresentar carteira de trabalho e declaração de não obter renda.
+        ATENÇÃO: O titular do cadastro ou seu dependente maior de 18 anos que possuir renda zero deverá apresentar carteira de trabalho e declaração de não obter renda.
     %table.ui.table
       %tbody
         %tr
