--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -89,12 +89,13 @@
           %i.icon.comment.outline.huge.gray.text-center
       .text-center
         Minhas Conversas
-  -# .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
-  -#   .ui.segment.text-center
-  -#     %a{href: "#{attendance.requeriments_path}"}
-  -#       %i.icon.file.text.outline.huge.gray.text-center.text-center
-  -#   .text-center
-  -#     Meus Requerimentos
+  - if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
+    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
+      .ui.segment.text-center
+        %a{href: "#{attendance.requeriments_path}"}
+          %i.icon.file.text.outline.huge.gray.text-center.text-center
+      .text-center
+        Meus Requerimentos
   -# - if @ticket_policy.allow_to_manifestation?
   -#   .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
   -#     .ui.segment.text-center
