--- a/engines/attendance/app/views/attendance/custom/custom_dependents/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_dependents/index.html.haml
@@ -70,7 +70,7 @@
     %p d) Carteira de trabalho e previdência social - CTPS;ou
     %p e) Certidão de casamento ou união estável com firma reconhecida;
     %p f) Certidão de tutela ou curatela por determinação judicial, para os que se encontrem sob esses institutos;
-    %p g) Comprovante de dependência dos pais, avós ou bisavós no imporsto de Renda de Pessoa Física - IRPF do titular;
+    %p g) Comprovante de dependência dos pais, avós ou bisavós no imposto de Renda de Pessoa Física - IRPF do titular;
     %br/
     %p Para comprovar a renda familiar bruta de até 12 (doze) salários mínimos serão admitidos
     %br/
