--- a/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
@@ -296,11 +296,11 @@
 // 5 ANOS DE DF
 #arrival_df_modal.ui.modal{style: 'display: none; padding-top: 80px; padding-bottom: 80px'}
   .ui.content
-    %p Para comprovar os 5 anos no DF e o tempo de domicílio no DF (Chegada ao DF), serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato.
+    %p Para comprovar os 5 anos no DF e o tempo de domicílio no DF (Chegada ao DF) serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato.
     %br/
 
     %p a) Comprovante de água, luz ou telefone;
-    %p b) Carteira de Trabalho acompanhada de declaração emitida pelo órgão empregado;
+    %p b) Carteira de Trabalho acompanhada de declaração emitida pelo órgão empregador;
     %p c) Declaração funcional, quando se tratar de servidor público;
     %p d) Declaração de instituição bancária com movimentação de conta corrente;
     %p e) Declaração escolar do candidato ou dos filhos;
