--- a/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
@@ -185,11 +185,11 @@
     %p É necessário a apresentação do Cadastro de Pessoa Física - CPF para dependentes com idade igual ou superior a 14 anos, acrescido dos seguintes documentos, dentro do prazo de validade, conforme o caso:
     %br/
 
-    %p a) Documento de Identidade, CNH ou passaporte brasileiro;
+    %p a) Documento de Identidade, CNH ou passaporte brasileiro; ou
     %p b) Certificado de reservista; ou
     %p c) Carteira de Trabalho e Previdência Social - CTPS; ou
-    %p d) Certidão de casamento ou união estável com firma reconhecida;
-    %p e) Certidão de tutela ou curatela por deteminação judicial, para os que se encontrem sob esses institutos;
+    %p d) Certidão de casamento ou união estável com firma reconhecida; ou
+    %p e) Certidão de tutela ou curatela por deteminação judicial, para os que se encontrem sob esses institutos; ou
     %p f) Comprovante de dependência dos pais, avós ou bisavós no Imposto de Renda de Pessoa Física - IRPF do titular;
 
 
