--- a/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_document.html.haml
@@ -66,7 +66,7 @@
   %br/
 - else
   .ui.label.red{style: 'text-align: justify; font-size: 15px;'}
-    %p Para finalizar esta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
+    %p Para finalizar esta etapa, favor enviar ao menos um arquivo de cada categoria de documentação exigida.
 
 // 5 ANOS DE DF
 #document_modal.ui.modal{style: 'display: none; padding-top: 90px; padding-bottom: 90px'}
