--- a/engines/healty/app/views/healty/sealing_addresses/_form.html.haml
+++ b/engines/healty/app/views/healty/sealing_addresses/_form.html.haml
@@ -1,11 +1,11 @@
 = simple_form_for @address do |f|
-  = f.input :name
+  = f.input :name,label:'nome'
   = f.input :cpf, input_html: {class: 'cpf'}
-  = f.input :city_id, as: :select, collection: Core::Address::City.federal_district, prompt: 'Selecione...'
-  = f.input :address
-  = f.input :observation, as: :text, input_html:{ rows: 2 }
-  = f.input :status, as: :select, prompt: 'Selecione'
-  = f.input :sub_area_id, as: :select, collection: Core::Healty::SealingSubArea.all, prompt: 'Selecione'
-  = f.input :lat
-  = f.input :lng
+  = f.input :city_id, as: :select, collection: Core::Address::City.federal_district,label:'Cidade', prompt: 'Selecione...'
+  = f.input :address, label:'Endereço'
+  = f.input :observation, as: :text,label:'Observação', input_html:{ rows: 2 }
+  = f.input :status, as: :select,label:'Ativo', prompt: 'Selecione'
+  = f.input :sub_area_id, as: :select, collection: Core::Healty::SealingSubArea.all,label:'Sub-Área', prompt: 'Selecione'
+  = f.input :lat, label:'Latitude'
+  = f.input :lng, label:'Longitude'
   = f.submit "Salvar dados", class: "ui button green fluid"
