--- a/engines/healty/app/views/healty/voi_documents/_form.html.haml
+++ b/engines/healty/app/views/healty/voi_documents/_form.html.haml
@@ -1,2 +1,2 @@
 = simple_form_for @voi_document do |f|
-  = f.input :attachment, as: :file, input_html: { onchange: '$(this.form).submit();' }
+  = f.input :attachment, as: :file,label:'Upload', input_html: { onchange: '$(this.form).submit();' }
