--- a/engines/healty/app/views/healty/sealing_documents/_form.html.haml
+++ b/engines/healty/app/views/healty/sealing_documents/_form.html.haml
@@ -1,2 +1,2 @@
 = simple_form_for @document, url: sealing_address_sealing_documents_path(@address) do |f|
-  = f.input :attachment, as: :file, input_html: { onchange: '$(this.form).submit();' }
+  = f.input :attachment, as: :file,label:'Upload', input_html: { onchange: '$(this.form).submit();' }
