--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -15,7 +15,8 @@
 .ui.grid.container
 .divider
 .ui.three.column.grid.container.black
-  - if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
+  /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
+  - if current_cadastre.id == 245419 || current_cadastre.current_situation.situation_status_id == 3
     .column
       .ui.segment.text-center{style: 'background-color: #0892ff !important'}
         %a{href: "#{attendance.custom_custom_tickets_path}"}
