--- a/engines/healty/app/views/healty/dashboard/index.html.haml
+++ b/engines/healty/app/views/healty/dashboard/index.html.haml
@@ -12,4 +12,6 @@
     %br
     = link_to 'CRIAR VOI DE ENDEREÇO CODHAB',  unit_vois_path, class: 'ui button yellow fluid'
     %br
+    = link_to 'TODAS AS VOIS',  vois_all_path, class: 'ui button yellow fluid'
+    %br
     = link_to 'CRIAR SELAGEM', new_sealing_address_path, class: 'ui button green fluid'
