--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,8 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    = javascript_include_tag "http://maps.google.com/maps/api/js?key=AIzaSyC19AcSjRaoMzPqsBOc7n6S09fs-hOY4Z4"
+
   %body
     .ui.container-fluid#animate.mega-margin
       = yield
