Implementando retorno de candidato

--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_message.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_message.html.haml
@@ -1,4 +1,4 @@
-- if @ticket.closed
+- if @ticket.closed && !@ticket.request
   .header.text-center
     Atendimento finalizado
   .content{style: 'text-align: center'}
