--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -1,20 +1,35 @@
-.two.wide.mobile.column
-  %a{href: "#{candidate.root_path}"}
-    %i.big.arrow.left.icon
-.thirteen.wide.mobile.column.text-center
-  .title-header Atendimento
-  .sub-title Processo de habilitação
-  .divider
-.ui.grid.container
-  - if (@ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five)
+:css
+  #message p a{
+    color: black !important;
+    text-decoration: underline !important;
+  }
+
+.ui.grid
+  .two.wide.mobile.column
+    %a{href: "#{candidate.root_path}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
+    .title-header Atendimento
+    .sub-title Processo de habilitação
+    .divider
+
+  - if (@ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five && !@ticket.request)
     .ui.label.green.fluid{style: 'text-align: justify; font-size: 14px'}
       %p Parabéns, você concluiu as 5 etapas do atendimento.
       %p Favor aguardar a análise dos documentos enviados.
       %p Posteriormente, você receberá uma notificação pelo aplicativo sobre sua situação no programa habitacional do DF.
-  - else
+  - elsif !@ticket.request
     .ui.label.blue{style: 'margin-bottom: 30px'}
       %p{style: 'text-align: justify; font-size: 14px !important'}
         Para finalizar o atendimento é necessário que você conclua as 5 etapas abaixo:
+  - else
+    .ui.label.yellow.fluid{style: 'text-align: justify; font-size: 14px; color: black !important;'}
+      #message{style: 'text-align: justify; font-size: 14px !important; font-weight: 100 !important;'}
+        %p{style: 'text-align: justify; font-size: 14px !important;'}
+          %b Atenção!
+          - @ticket.requests.where(closed:  false).each do |request|
+            = request.description.html_safe
+
   %table.ui.table.celled
     %tbody{style: "#{@ticket.action_one ? 'background-color: #51a551' : ''}"}
       %tr
