--- a/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
@@ -1,2 +1,2 @@
-= simple_form_for @solicitation_document, url: solicitation_documents_path do |f|
-  = f.input :attachment, as: :file,label:'Upload', input_html: { onchange: '$(this.form).submit();' }
+= simple_form_for @solicitation_document, url: solicitation_documents_path(@solicitation.id) do |f|
+  = f.input :attachment, as: :file, label: 'Upload', input_html: { onchange: '$(this.form).submit();' }
