--- a/engines/regularization/app/views/regularization/home/index.html.haml
+++ b/engines/regularization/app/views/regularization/home/index.html.haml
@@ -6,15 +6,22 @@
 .ui.two.column.grid.container.black
   .column
     .ui.text-center
-      %a{href: "#{new_solicitation_path}"}
+      %a{href: "#{new_solicitation_path(subject_id: 1)}"}
         -# %i.icon.calendar.huge.gray
         = image_tag ('/images/icon-resume.png')
     .text-center
       Requerimento de Regularização
   .column
     .ui.text-center
-      %a{href: "#{new_solicitation_path}"}
+      %a{href: "#{new_solicitation_path(subject_id: 2)}"}
         -# %i.icon.plane.huge
         = image_tag ('/images/contract.png')
     .text-center
       Retificação de Escritura
+  -# .column
+  -#   .ui.text-center
+  -#     %a{href: "#{monitoring_path}"}
+  -#       -# %i.icon.plane.huge
+  -#       = image_tag ('/images/search.png')
+  -#   .text-center
+  -#     Acompanhamento de Escritura
