--- a/engines/regularization/app/views/regularization/solicitations/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitations/_form.html.haml
@@ -7,7 +7,7 @@
   = f.input :by_group, label: 'Conjunto', as: :select, collection: [], input_html: { id: 'by_group', name: 'by_group'}, selected: params[:by_group], include_blank: 'Filtrar por Conjunto'
   = f.input :by_unit, label: 'Unidade', as: :select, collection: [], input_html: {  id: 'by_unit',  name: 'by_unit'}, selected: params[:by_unit], include_blank: 'Filtrar por Unidade'
   = f.input :address, label:'Endereço'
-  -# = f.input :attachment, as: :file,label:'Upload', input_html: { onchange: '$(this.form).submit();' }
+  = f.input :subject_id, :as => :hidden, :input_html => { :value => params[:subject_id] , name:'subject_id'}
   = f.input :content, as: :text,label:'Mensagem', input_html:{ rows: 2 }
   = f.submit "Prosseguir", class: "ui button green fluid"
 
