--- a/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
@@ -12,7 +12,8 @@
                 %td
                   %h4.ui.image.header
                     .content
-                      = link_to 'Arquivo', document.attachment_url, target: '_blank' rescue nil
+                      -# = link_to 'Arquivo', document.attachment_url, target: '_blank' rescue nil
+                      = 'Arquivo enviado com sucesso'
 .big-divider
 .ui.grid.container
   .column.content-form
